add book mapper

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.graphql.graphiql.enabled=true
 spring.graphql.cors.allowed-origins=*
 spring.graphql.schema.printer.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=postgres
+spring.datasource.username=mohamed
 spring.datasource.password=123
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
