--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout code
-        uses: action/checkout@v3
+        uses: actions/checkout@v3
 
       - name: setup
-        uses: action/setup-java@v3
+        uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
           java-version: 17
