add GitHub action

--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
                         <image>eclipse-temurin:17.0.4.1_1-jre</image>
                     </from>
                     <to>
-                        <image>registry.hub.docker.com/dev19med/${project.artifactId}</image>
+                        <image>registry.hub.docker.com/dev19med/graphql</image>
                     </to>
                 </configuration>
             </plugin>
