add docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.1'
 services:
-  app:
-    container_name: springboot-postgresql
-    image: springboot-postgresql
-    build: ./
-    ports:
-      - "8080:8080"
-    depends_on:
-      - postgresqldb
+#  app:
+#    container_name: springboot-postgresql
+#    image: springboot-postgresql
+#    build: ./
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - postgresqldb
   postgresqldb:
     image: postgres
     ports:
@@ -16,3 +16,17 @@ services:
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_DB=testdb
+  app:
+    build:
+      dockerfile: Dockerfile
+    container_name: app
+    ports:
+      - "8080:8080"
+    depends_on:
+      - postgresqldb
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB_NAME: testdb
+      DB_ADDRESS: postgresqldb # OR URL
+      DB_PORT: 5432
