--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.graphql.graphiql.enabled=true
 spring.graphql.cors.allowed-origins=*
 spring.graphql.schema.printer.enabled=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=mohamed
-spring.datasource.password=123
+#spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+
+
+spring.datasource.url: jdbc:postgresql://${DB_ADDRESS}:${DB_PORT}/${POSTGRES_DB_NAME}
+spring.datasource.username: ${POSTGRES_USER}
+spring.datasource.password: ${POSTGRES_PASSWORD}
