--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 
 
 
-spring.datasource.url: jdbc:postgresql://${DB_ADDRESS}:${DB_PORT}/${POSTGRES_DB_NAME}
-spring.datasource.username: ${POSTGRES_USER}
-spring.datasource.password: ${POSTGRES_PASSWORD}
+spring.datasource.url: jdbc:postgresql://localhost:5433/testdb
+spring.datasource.username: postgres
+spring.datasource.password: postgres
